Apply code analysis suggestions to AuthorizerTest
- Simplify assert
- Use List.of(if-one-arg)